Update sync java version (#531)